--- a/practice/css/Super/exercise/product.css
+++ b/practice/css/Super/exercise/product.css
@@ -41,7 +41,7 @@
 .card-text {
     font-size: 16px;
 }
-.card-button{
+.card-button {
     background-color: #424242;
     color: white;
     margin-top: 5px;
@@ -52,4 +52,16 @@
     font-weight: bold;
     font-size: 16px;
     margin-top: 2px;
+}
+@media screen and (max-width: 991px) {
+    .product-grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+}
+@media screen and (max-width: 768px) {
+    .product-grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+    }
 }
