Bootstrap exercises h1 halfway done

--- a/practice/css/Super/exercise/hero.css
+++ b/practice/css/Super/exercise/hero.css
@@ -6,7 +6,12 @@ section.hero{
     height: 500px;
     position: relative;
     top: 20px;
-    margin-left: 0;
+    margin: 0;
+    left: 0;
+}
+body{
+    left: 0;
+    margin: 0;
 }
 .hero-container{
     position: absolute;
